# bicopter_simulation

./: BiCopter.parm  CMakeLists.txt  README.md  bicopter_runway  bicopter_with_ardupilot  bicopter_with_standoffs  package.xml  sim_vehicle.py
config/: bicopter.param
models/bicopter/: model.config  model.sdf
models/bicopter_with_ardupilot/: bicopter_with_ardupilot.sdf  model.config  model.sdf
models/bicopter_with_standoffs/: bicopter_with_standoffs.sdf
scripts/: autotest.py  vehicleinfo.py
worlds/: bicopter_runway.sdf
