<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bicopter_gz_description</name>
  <version>0.0.0</version>
  <description>BiCopter Gazebo models configured for ArduPilot SITL</description>
  <maintainer email="maintainer@gmail.com">Maintainer</maintainer>
  <license>TODO</license>
  <author>Author</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <exec_depend>ardupilot_gazebo</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

